# maker

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
maker/: main.py  shared.py
maker/cmd/: __init__.py  pdf.py  resume.py  yt.py
maker/resume/: __init__.py  fonts.py  generator.py  models.py
maker/video/: __init__.py  cutter.py  downloader.py
